pod-c.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: valentine
    app.kubernetes.io/instance: snacka-scs
    app.kubernetes.io/component: frontend
  name: valentine-conoa
spec:
  containers:
  - image: ghcr.io/talavis/snacka-scs:conoa
    name: valentine-conoa
    ports:
      - containerPort: 8080
    securityContext:
      seccompProfile:
        type: "RuntimeDefault"
      runAsNonRoot: true
      runAsUser: 10000
      runAsGroup: 10000
      allowPrivilegeEscalation: false
      capabilities:
        drop:
          - ALL
